# newton-cpp

./: .gitignore  CMakeLists.txt  setup_mesh.py
src/: Fractal.cpp  Fractal.h  Newton  __init__.py  main.cpp  py_newton.cpp
